[package]
name = "vulkano-glyph"
description = "Text rendering with vulkano."
version = "0.0.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/vulkano-glyph"
documentation = "https://docs.rs/vulkano-glyph"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
vulkano = { path = "../vulkano/vulkano" }
vulkano-shader-derive = { path = "../vulkano/vulkano-shader-derive" }
id-map = "0.2.1"
log = "0.4.0"

[dependencies.rusttype]
version = "0.6.1"
features = ["gpu_cache"]

[dev-dependencies]
vulkano-win = { path = "../vulkano/vulkano-win" }
winit = "0.16.0"
env_logger = "0.5.10"