[package]
name = "vulkano-glyph"
description = "Text rendering with vulkano."
version = "0.1.1"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/vulkano-glyph"
documentation = "https://docs.rs/vulkano-glyph"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
vulkano = "0.10.0"
vulkano-shader-derive = "0.10.0"
log = "0.4.0"

[dependencies.rusttype]
version = "0.7.0"
features = ["gpu_cache"]

[dev-dependencies]
vulkano-win = "0.10.0"
winit = "0.17.0"
env_logger = "0.5.10"