[package]
name = "vulkano-glyph"
description = "Text rendering with vulkano."
version = "0.2.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/vulkano-glyph"
documentation = "https://docs.rs/vulkano-glyph"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
vulkano = "0.11.0"
vulkano-shaders = "0.11"
log = "0.4.0"

[dependencies.rusttype]
version = "0.7.0"
features = ["gpu_cache"]

[dev-dependencies]
vulkano-win = "0.11.0"
winit = "0.18.0"
env_logger = "0.5.10"